[package]
name = "astrid-capsule-skills"
version = "0.1.0"
edition = "2024"
description = "Skills Loader for the Astrid OS"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
astrid-sdk = { path = "../../core/crates/astrid-sdk", version = "0.1.1", features = ["derive"] }
extism-pdk = "1.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
